--- a/modular_beyond/pubspec.yaml
+++ b/modular_beyond/pubspec.yaml
@@ -1,13 +1,14 @@
 name: modular_beyond
 description: Smart project structure with dependency injection and route management
-version: 6.3.3
+version: 6.4.0
 homepage: https://github.com/Flutterando/modular
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  modular_core: ">=3.3.0 <4.0.0"
+  modular_core:
+    path: ../modular_core
   meta: ">=1.3.0 <2.0.0"
   result_dart: ">=1.0.4 <2.0.0"
   flutter:
