--- a/modular_beyond/example/pubspec.yaml
+++ b/modular_beyond/example/pubspec.yaml
@@ -49,6 +49,8 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   uses-material-design: true
+  assets:
+    - assets/langs/
 
 vars:
   clean: flutter clean
